introduce SparseArray